# NetCheck

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NetCheck.sln  README.md  netcheck.rc  setup.iss
.run/: Publish NetCheck.Worker.run.xml  Publish NetCheck.run.xml  Publish.run.xml
NetCheck/: GlobalShared.cs  GlobalUsings.cs  NativeMethods.cs  NetCheck.csproj  Program.cs  Utils.cs
NetCheck.Shared/: Constants.cs  NetCheck.Shared.csproj
NetCheck.Worker/: NetCheck.Worker.csproj  Program.cs
NetCheck.Worker/Controllers/: HealthController.cs  NetworkController.cs
NetCheck.Worker/Hubs/: ConnectionHub.cs
NetCheck.Worker/Services/: ClientHeartbeatHostedService.cs  ConnectivityHostedService.cs  NetworkService.cs  PingService.cs
NetCheck/Controls/: StatusBanner.Designer.cs  StatusBanner.cs
NetCheck/Events/: ProbeResultEventArgs.cs  ProbingUrlEventArgs.cs
NetCheck/Extensions/: FormExtensions.cs
NetCheck/Forms/: ColorDisplayForm.Designer.cs  ColorDisplayForm.cs  ColorDisplayForm.resx  MainForm.Designer.cs  MainForm.cs
NetCheck/Managers/: BackendManager.cs  IpcManager.cs  MainFormManager.cs  PortManager.cs  ServiceManager.cs  TrayManager.cs  WebViewManager.cs  WorkerManager.cs
NetCheck/Resources/: Icons.Designer.cs  Icons.resx
NetCheck/Services/: NetworkService.cs  PingService.cs  ProbeService.cs  TrayService.cs
NetCheck/static/: index.html
resources/: icons.qrc
src/: main.cpp
src/widgets/: MainWindow.cpp  MainWindow.h
ui/: index.html  package.json  tailwind.config.js  vite.config.mts
ui/src/: App.vue  main.ts  styles.css
(+2 files in other folders)
